--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <div id="root" data-theme="light"></div>
+    <div id="root" class="bg-[#2a303c] text-white"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
